description of previous work experience

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <h1>hello_world! &#128075; <br>
-        my name is Josh Vasquez and I am a jr. software engineer.</h1>
+        my name is josh vasquez and i am a jr. software engineer.</h1>
         <h2>education:</h2>
-        <p>i graduated from Pepperdine University with a bachelor of science in physics</p>
+        <p>i graduated from pepperdine university with a bachelor of science in physics</p>
         <h3>relevant coursework:</h3>
         <p></p>
         
@@ -25,19 +25,38 @@
                 <p>sentient energy (milpitas, ca)</p>
                 <p>software developer</p>
                 <p>jan 2022 - feb 2023</p>
-                <p><p>
+                <p>what i did:<p>
+                    <ul>
+                    <li>participated in designing and building an interactive R Shiny dashboard, facilitating real-time data exploration and manipulation.</li>
+                    <li>Developed data analysis tools to create detailed visual representations of electric waveforms using advanced data visualization libraries and data mining methods.</li>
+                    <li>Improved an algorithmic framework for automatically identifying and categorizing unusual waveforms in extensive electric datasets.</li>
+                    <li>Tech stack: Python, R, SQL, and MySQL for data preprocessing, analysis, and storage, facilitating seamless integration of multiple data sources</li>
+                    </ul>
+                    
             </li>
             <br>
             <li>
                 <p>nanotego (remote)</p>
                 <p>software engineer intern</p>
                 <p>feb 2021 - may 2021</p>
+                <p>what i did:</p>
+                <ul>
+                    <li>Acquired foundational knowledge in computer systems, delving into the intricacies of Linux and ethical hacking, including ethical penetration testing and vulnerability assessment techniques.</li>
+                    <li>Assimilated the basics of computer systems, Linux, and ethical hacking</li>
+                </ul>
             </li>
             <br>
             <li>
                 <p>pepperdine university (malibu, ca)</p>
                 <p>physics research assistant</p>
                 <p>sep 2018 - may 2021</p>
+                <p>what i did:</p>
+                <ul>
+                    <li>Design and develop data analyzation program in R using the R-graph library, this allowed us to test our Graph Theory hypotheses.</li>
+                    <li>Attempted to solve a differential solution of an Anharmonic Oscillator.</li>
+                    <li>Wrote weekly reports discussing progress, problems, and solutions using LaTex</li>
+
+                </ul>
             </li>
         </ul>
     </header>
