--- a/index.html
+++ b/index.html
@@ -16,128 +16,171 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+    <!--Java-->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
+    <!--Linux-->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
 </head>
 <body>
-<div class="container mt-5 mb-5" style="max-width: 800px;">
-    <header>
-        <h1>
-            hello_world! <span class="wave">&#128075;</span> <br>
-            my name is <span class="invert">Josh</span>. <br>
-            i'm an aspiring software engineer<span class="cursor"></span>
-        </h1>
-    </header>
-</div>
-
-<!-- Centered Container for Content -->
-<div class="container mt-5 mb-5" style="max-width: 800px;">
-
-    <!--Projects-->
-    <h2 class="sticky-header"><span class="book-collapse"><a href="https://github.com/joshvasquezr" target="_blank"><i class="fab fa-github"></i></a></span> projects</h2>
-
-
-
-    <h2 class="sticky-header"><span class="smash">&#128296;</span> work xp:</h2>
-    <ul class="list-unstyled">
-        <!-- Sentient Energy -->
-        <li class="mb-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h5>Sentient Energy (Milpitas, CA)</h5>
-                    <p>Software Developer</p>
-                </div>
-                <div class="col-md-4 text-end">
-                    <p><i>Jan 2022 - Feb 2023</i></p>
-                </div>
-            </div>
-            <p><strong>What I did:</strong></p>
-            <p>Designed and built an interactive front-end dashboard in R Shiny, enabling real-time data exploration for over 10,000 data points,
-                transforming 80% of raw data into actionable insights. Developed Python-based analysis tools for detailed visualization of 1M+ electric waveform records,
-                using advanced data mining techniques. Enhanced an algorithmic framework in Python and SQL, optimizing processing speed by 30% and seamlessly integrating
-                data from multiple sources with MySQL.</p>
-        </li>
-
-        <!-- Nanotego -->
-        <li class="mb-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h5>Nanotego (Remote)</h5>
-                    <p>Software Engineer Intern</p>
-                </div>
-                <div class="col-md-4 text-end">
-                    <p><i>Feb 2021 - May 2021</i></p>
-                </div>
-            </div>
-            <p><strong>What I did:</strong></p>
-            <p>Gained foundational knowledge in computer systems, focusing on Linux and ethical hacking, including penetration testing and vulnerability assessment techniques.</p>
-        </li>
-
-        <!-- Pepperdine University -->
-        <li class="mb-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h5>Pepperdine University (Malibu, CA)</h5>
-                    <p>Physics Research Assistant</p>
-                </div>
-                <div class="col-md-4 text-end">
-                    <p><i>Sep 2018 - May 2021</i></p>
-                </div>
-            </div>
-            <p><strong>What I did:</strong></p>
-            <p>Developed a data analysis program in R using the igraph library to test hypotheses on the Total Coloring Conjecture, improving the team's ability to analyze
-                complex graph structures. Solved differential equations for an Anharmonic Oscillator, applying advanced mathematical techniques to explore non-linear systems.
-                Documented weekly research progress in LaTeX, providing clear updates on developments, challenges, and solutions for effective collaboration.</p>
-        </li>
-    </ul>
-
-    <h2 class="sticky-header"><span class="book-collapse">&#128218;</span> education</h2>
-    <ul class="list-unstyled">
-        <!-- University of San Francisco -->
-        <li class="mb-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h5>University of San Francisco</h5>
-                    <p>Masters of Science in Computer Science</p>
-                </div>
-                <div class="col-md-4 text-end">
-                    <p><i>Exp. Grad. 2027</i></p>
-                </div>
-            </div>
-        </li>
-
-        <!-- Pepperdine University -->
-        <li class="mb-4">
-            <div class="row">
-                <div class="col-md-8">
-                    <h5>Pepperdine University</h5>
-                    <p>Bachelors of Science in Physics</p>
-                </div>
-                <div class="col-md-4 text-end">
-                    <p><i>May 2021</i></p>
-                </div>
-            </div>
-        </li>
-    </ul>
-
-</div> <!-- End of Container -->
-
-<div class="container mt-5 mb-5" style="max-width: 800px;">
-    <div class="contact-links">
-
-        <a href="https://www.youtube.com/@joshuavasquez9019" target="_blank">
-            <i class="fab fa-youtube"></i>
-        </a>
-
-        <a href="https://www.linkedin.com/in/joshvasquezr" target="_blank">
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/joshvasquezr" target="_blank">
-            <i class="fab fa-github"></i>
-        </a>
-        <a href="mailto:josh.vasquez.ruiz@gmail.com">
-            <i class="fas fa-envelope"></i>
-        </a>
+    <div class="container mt-5 mb-5" style="max-width: 800px;">
+        <header>
+            <h1>
+                hello_world! <span class="wave">&#128075;</span> <br>
+                my name is <span class="invert">Josh</span>. <br>
+                i'm an aspiring software engineer<span class="cursor"></span>
+            </h1>
+        </header>
     </div>
-</div>
+
+    <!-- Centered Container for Content -->
+    <div class="container mt-5 mb-5" style="max-width: 800px;">
+
+        <!--Projects-->
+        <h2 class="sticky-header"><span class="book-collapse"><a href="https://github.com/joshvasquezr" target="_blank"><i class="fab fa-github"></i></a></span> projects</h2>
+        <ul class="list-unstyled">
+
+            <!--Lexer-Parser-Interpreter Project CLI-->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <a href="lexer-parser-interpreter.html" class="project-links"><h5>Lexer-Parser-Interpreter</h5></a>
+
+                        <p>This project is about building a simple program that reads and converts high-level code into a lower-level bytecode format and then runs it
+                            by simulating a tiny virtual computer.</p>
+                        <a href="https://github.com/joshvasquezr/lexer-parser-interpreter-joshvasquezr" style="color: #2828c1 !important; text-decoration: underline !important;">GitHub Repo</a>
+                    </div>
+                    <div class="col-md-4 text-end">
+
+                        <i class="devicon-java-plain-wordmark colored"></i>
+
+                    </div>
+                </div>
+            </li>
+
+            <!--Wheel of Fortune-->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <a href="wheel-of-fortune.html" class="project-links"><h5>Wheel of Fortune CLI</h5></a>
+                        <p>A command-line Wheel of Fortune game. Built using object-oriented design.</p>
+                        <a href="https://github.com/joshvasquezr/wheel-of-fortune" style="color: #2828c1 !important; text-decoration: underline !important;">GitHub Repo</a>
+
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <i class="devicon-linux-plain colored"></i>
+                        <i class="devicon-java-plain-wordmark colored"></i>
+                    </div>
+                </div>
+            </li>
+
+
+        </ul>
+
+
+        <h2 class="sticky-header"><span class="smash">&#128296;</span> work xp</h2>
+        <ul class="list-unstyled">
+            <!-- Sentient Energy -->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h5>Sentient Energy (Milpitas, CA)</h5>
+                        <p>Software Developer</p>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <p><i>Jan 2022 - Feb 2023</i></p>
+                    </div>
+                </div>
+                <p><strong>What I did:</strong></p>
+                <p>Designed and built an interactive front-end dashboard in R Shiny, enabling real-time data exploration for over 10,000 data points,
+                    transforming 80% of raw data into actionable insights. Developed Python-based analysis tools for detailed visualization of 1M+ electric waveform records,
+                    using advanced data mining techniques. Enhanced an algorithmic framework in Python and SQL, optimizing processing speed by 30% and seamlessly integrating
+                    data from multiple sources with MySQL.</p>
+            </li>
+
+            <!-- Nanotego -->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h5>Nanotego (Remote)</h5>
+                        <p>Software Engineer Intern</p>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <p><i>Feb 2021 - May 2021</i></p>
+                    </div>
+                </div>
+                <p><strong>What I did:</strong></p>
+                <p>Gained foundational knowledge in computer systems, focusing on Linux and ethical hacking, including penetration testing and vulnerability assessment techniques.</p>
+            </li>
+
+            <!-- Pepperdine University -->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h5>Pepperdine University (Malibu, CA)</h5>
+                        <p>Physics Research Assistant</p>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <p><i>Sep 2018 - May 2021</i></p>
+                    </div>
+                </div>
+                <p><strong>What I did:</strong></p>
+                <p>Developed a data analysis program in R using the igraph library to test hypotheses on the Total Coloring Conjecture, improving the team's ability to analyze
+                    complex graph structures. Solved differential equations for an Anharmonic Oscillator, applying advanced mathematical techniques to explore non-linear systems.
+                    Documented weekly research progress in LaTeX, providing clear updates on developments, challenges, and solutions for effective collaboration.</p>
+            </li>
+        </ul>
+
+        <h2 class="sticky-header"><span class="book-collapse">&#128218;</span> education</h2>
+        <ul class="list-unstyled">
+            <!-- University of San Francisco -->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h5>University of San Francisco</h5>
+                        <p>Masters of Science in Computer Science</p>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <p><i>Exp. Grad. 2027</i></p>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Pepperdine University -->
+            <li class="mb-4">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h5>Pepperdine University</h5>
+                        <p>Bachelors of Science in Physics</p>
+                    </div>
+                    <div class="col-md-4 text-end">
+                        <p><i>May 2021</i></p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+    </div> <!-- End of Container -->
+
+    <div class="container mt-5 mb-5" style="max-width: 800px;">
+        <div class="contact-links">
+
+            <a href="https://www.youtube.com/@joshuavasquez9019" target="_blank">
+                <i class="fab fa-youtube"></i>
+            </a>
+
+            <a href="https://www.linkedin.com/in/joshvasquezr" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/joshvasquezr" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:josh.vasquez.ruiz@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
