--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </ul>
 
     </div> <!-- End of Container -->
-
+<footer>
     <div class="container mt-5 mb-5" style="max-width: 800px;">
         <div class="contact-links">
 
@@ -181,6 +181,8 @@
             </a>
         </div>
     </div>
+</footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
