more updates... added WoF page, added home button

--- a/lexer-parser-interpreter.html
+++ b/lexer-parser-interpreter.html
@@ -25,10 +25,14 @@
             <h1>
                 <i class="devicon-java-plain-wordmark colored"></i>
                 Lexer-Parser-Interpreter<span class="cursor"></span>
-
             </h1>
+            <br>
         </header>
+        <div class="lexer-parser-interpreter">
+            <a href="index.html" style="color: #2828c1 !important; text-decoration: underline !important;">Home <span class="wave">&#128075;</span></a>
+        </div>
     </div>
+
     <div class="container mt-5 mb-5" style="max-width: 800px;">
         <ul class="list-unstyled">
             <li class="mb-4">
