--- a/wheel-of-fortune.html
+++ b/wheel-of-fortune.html
@@ -2,11 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wheel of Fortune</title>
+    <link rel="stylesheet" href="styles.css">
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon_io (1)/favicon-16x16.png">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!--Java and Linux icons-->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 </head>
 <body>
+<div class="container mt-5 mb-5" style="max-width: 800px;">
+    <header class="lexer-parser-interpreter">
+        <h1>
+            <i class="devicon-java-plain-wordmark colored"></i>
+            The Wheel of Fortune!<span class="cursor"></span>
+            <iframe src="https://giphy.com/embed/KAeW1lJUqjHMt3jntn" width="120" height="90" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/wheeloffortune-transparent-wheel-of-fortune-KAeW1lJUqjHMt3jntn"></a></p>
+        </h1>
+    </header>
+    <div class="lexer-parser-interpreter">
+        <a href="index.html" style="color: #2828c1 !important; text-decoration: underline !important;">Home <span class="wave">&#128075;</span></a>
+    </div>
+</div>
+<div class="container mt-5 mb-5" style="max-width: 800px;">
+    <ul class="list-unstyled">
+        <li class="mb-4">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Overview</h2>
+                    <div class="project-description">
+                        <p>Hi, I'm Josh Vasquez. Welcome to my interactive version of the Wheel of Fortune, built right into the command line. This project combines the excitement of the classic game show with the technical challenge of programming, providing a unique twist on both.</p>
+                        <p>The game initiates with a hidden phrase that players guess letter by letter, utilizing three life-lines to steer clear of failure. It's a test of your guessing skills and your ability to handle pressure, all from your terminal.</p>
 
+                        <p>Each version of the game builds in complexity—from a simple function in <code>WheelOfFortuneMain.java</code> to a robust, object-oriented design in <code>WheelOfFortuneObject.java</code>. Each iteration enhances your gameplay experience and showcases different aspects of Java programming.</p>
+
+                        <p>The climax of this project is the addition of a bot player in <code>WheelOfFortuneBot.java</code>, challenging not just your coding skills but also your strategic thinking. Will you outguess the bot or will it outsmart you?</p>
+                        <br>
+                        <div class="video-container" style="display: flex; justify-content: center; align-items: center;">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/VUNcRxqEPls" title="Lexer Demo (3/3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <br><br>
+                        <p>Curious to try it out or enhance it? The code is readily accessible, and I'm always open to feedback or ideas for new features. Dive into this coding challenge, and let’s make the command line more playful together!</p>
+                        <p>Reach out through my <a href="https://github.com/joshvasquezr/lexer-parser-interpreter-joshvasquezr" style="color: #2828c1 !important; text-decoration: underline !important;">GitHub</a>, or contact me via <a href="mailto:josh.vasquez.ruiz@gmail.com" style="color: #2828c1 !important; text-decoration: underline !important;">email</a> or <a href="https://www.linkedin.com/in/joshvasquezr" style="color: #2828c1 !important; text-decoration: underline !important;">LinkedIn</a>. I look forward to hearing your thoughts and perhaps even seeing you on the leaderboard!</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<footer>
+    <div class="container mt-5 mb-5" style="max-width: 800px;">
+        <div class="contact-links">
+
+            <a href="https://www.youtube.com/@joshuavasquez9019" target="_blank">
+                <i class="fab fa-youtube"></i>
+            </a>
+
+            <a href="https://www.linkedin.com/in/joshvasquezr" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/joshvasquezr" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:josh.vasquez.ruiz@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
+    </div>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
